syntax = "proto3";

package core_quiz_generation;

// Request message for generating quiz questions by bank ID
message GenerateQuizByBankRequest {
    int64 bank_id = 1;
    string user_id = 2;
}

// Content entry being processed
message ContentEntry {
    string id = 1;
    string name = 2;
    int32 word_count_analyzed = 3;
}

// Unified progress message for quiz generation
message QuizGenerationProgress {
    string bank_id = 2;
    int32 total_content_entries = 3;
    optional int32 total_content_entries_skipped = 4;
    int32 current_content_entry_index = 5;
    int32 questions_generated_so_far = 6;
    ContentEntry content_entry = 7;
}

// Quiz Generation Service
service CoreQuizGenerationService {
    rpc GenerateQuizByBank(GenerateQuizByBankRequest) returns (stream QuizGenerationProgress);
}